# pdxhackerspace-calibre-web-rag-injester

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.ollama.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
scripts/: tag-release.sh
src/calibre_web2rag/: __init__.py  calibre_db.py  chunking.py  cli.py  config.py  embeddings.py  extractors.py  ingest.py  links.py  models.py  qdrant_store.py
tests/: test_calibre_db.py  test_chunking.py  test_embeddings.py  test_extractors.py  test_ingest_points.py  test_links.py  test_qdrant_store.py
