[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calibre-web2rag"
version = "0.1.2"
description = "RAG ingester for Calibre Web libraries into Qdrant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "qdrant-client>=1.11.0",
  "sentence-transformers>=3.1.1",
  "pypdf>=5.0.1",
  "ebooklib>=0.18",
  "beautifulsoup4>=4.12.3",
  "mobi>=0.3.3",
  "python-dotenv>=1.0.1",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
]

[project.scripts]
calibre-web2rag = "calibre_web2rag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
